--- a/08_spacing_aligment/style.css
+++ b/08_spacing_aligment/style.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply px-4 py-2 font-bold rounded
+    }
+    .btn-lg {
+        @apply text-lg
+    }
+    .btn-indigo {
+        @apply bg-indigo-600 text-white
+    }
+
+    .btn-indigo:hover {
+        @apply bg-indigo-900
+    }
+}
